app-code/glances/glances.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: glances
  namespace: monitoring
  labels:
    app: glances
spec:
  selector:
    matchLabels:
      app: glances
  template:
    metadata:
      labels:
        app: glances
    spec:
      hostNetwork: true
      hostPID: true
      dnsPolicy: ClusterFirstWithHostNet
      
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - pi

      securityContext:
        seccompProfile:
          type: Unconfined
        appArmorProfile:
          type: Unconfined

      containers:
        - name: glances
          image: nicolargo/glances:4.5.5-full
          securityContext:
            allowPrivilegeEscalation: true
            runAsUser: 0
          ports:
            - containerPort: 61208
              name: webui
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: glances-svc
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: glances
  ports:
    - port: 61208
      targetPort: 61208
      name: webui
